.[1.12.0] - UNRELEASED
[%collapsible]
====
[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/134[#134] Overload `RandomService#randomSublist` and `RandomService#randomSubset` with `sizeRange` parameter
* https://github.com/serpro69/kotlin-faker/pull/144[#144] Add index and punctuation chars support to `RandomService#randomString`

[discrete]
=== Changed

* https://github.com/serpro69/kotlin-faker/pull/135[#135] Initialize Faker data providers lazily

[discrete]
=== Fixed
* https://github.com/serpro69/kotlin-faker/issues/140[#140] Fix NPE when generating CurrencySymbol with non 'en' locale
* https://github.com/serpro69/kotlin-faker/pull/142[#142] Fix unique localized category keys missing from dictionary
* https://github.com/serpro69/kotlin-faker/issues/136[#136] Parameter 'streets' not found in 'ADDRESS' category
* https://github.com/serpro69/kotlin-faker/issues/137[#137] Parameter 'category' not found in 'COMPANY' category for 'ja' locale
* https://github.com/serpro69/kotlin-faker/pull/146[#146] Fix `RandomService#randomString` for some eng-lang locales

[discrete]
=== Docs
* https://github.com/serpro69/kotlin-faker/pull/130[#130] Document how to add new data providers
====

.[1.11.0] - 2022-05-22
[%collapsible]
====
[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/122[#122] [core] Add (unique) `numerify`, `letterify`, `bothify` and `regexify` functions through `StringProvider`
* https://github.com/serpro69/kotlin-faker/pull/129[#129] [core] Update dictionary files, including:
* New data and functions in existing data providers
* Updates to existing localized dictionaries
** Especially notable for `fr` and `ja` locales as they now, similarly to `en` locale, contain multiple dict files per locale
* New localized dictionaries for `es-AR`, `lt` and `mi-NZ` locales

++++
<details><summary><h3>New Data Providers</h3></summary>
<p>
++++
* `adjective`
* `australia`
* `bible`
* `bird`
* `brooklynNineNine`
* `camera`