@@ -1,0 +1,23 @@
+---
+---
+
+== `Faker().crypto`
+
+.Available Functions
+[%collapsible]
+====
+[source,kotlin]
+----
+Faker().crypto.md5() // => fc798bf6aaba1fe4e7ecbf6fe27af92e
+
+Faker().crypto.sha1() // => 4b136b53f9bd55bca6cdf1a238bb528ef86ebc3b
+
+Faker().crypto.sha224() // => 2f58ad3a57958ffabd9ecd0ff9aacddb8f1c04cd8db8df6ce2dcc328
+
+Faker().crypto.sha256() // => 31fc0cbfdbfa09d7069dc2ce1cde0d439f9eb420ae42265cdcc5de852cbf1adf
+
+Faker().crypto.sha384() // => 0a1d8cc70ba3ea166a348c34b6e695fefdceb6663fd8842b96336cbaf5e5dcbe7415cdbc4b8f210aece3fc9ed8abce0f
+
+Faker().crypto.sha512() // => 2c1ddfb86b3bb10d1f7bae26fcff20e756ede4708c6e55fea8d9cd8d0855ace61ff27265a31cc0645ac0f662d6d6cd3aad33efbed0c3f6f966d920f3bc6de005
+----
+====
